# icp-hackathon-crowdfunding

./: README.md  canister_ids.json  package-lock.json  package.json
src/project_backend/: Cargo.toml
src/project_backend/src/: lib.rs
src/project_frontend/: package.json
src/project_frontend/src/: App.jsx  HomePage.jsx  auth.js  formStyles.css  service.jsx
